Fix saved card spacing

--- a/src/blocks/card/_saved/card_saved.css
+++ b/src/blocks/card/_saved/card_saved.css
@@ -8,6 +8,12 @@
   margin: 0 0 16px 0;
 }
 
+@media screen and (max-width: 1439px) {
+  .card_saved:nth-child(3) {
+    margin: 0 16px 16px 0;
+  }
+}
+
 @media screen and (max-width: 1023px) {
   .card.card.card_saved {
     height: 420px;
